web-app/client/assets/css/new/main.css
/* ... */
.dash-app-resource-stream {
	background-position: 0 0;
}

.dash-app-resource-flow {
	background-position: 0 -64px;
}

.dash-app-resource-dataset {
	background-position: 0 -129px;
}

.dash-app-resource-query {
	background-position: 0 -191px;
}

.dash-app-resource-usage {
	color: #505050;
	font-size: 32px;
	text-align: center;
	padding: 3px;
	letter-spacing: 0.04em;
}

.dash-app-resource-usage span {
	font-size: 0.4em;
	letter-spacing: 0;
	margin-left: 2px;
}

.dash-app-resource-alert {
	color: #dc484a !important;
}

.dash-app-trends {
	width: 100%;
	border-top: 1px solid #eaeaea;
}

.dash-app-sub {
	border-top: 1px solid #eff0ef;
	padding: 12px;
}

.dash-app-sub-title {
	font-size: 12px;
	color: #5c696c;
	text-transform: uppercase;
	letter-spacing: 0.1em;
}

.dash-app-sub-health {
	margin-right: 100px;
	color: #aaa;
	padding: 24px;
	text-align: center;
	border: 1px solid #eee;
	background-color: #fafafa;
}

.dash-app-sub-busy {
	margin-right: 100px;
	color: #aaa;
	padding: 24px;
	text-align: center;
	border: 1px solid #eee;
	background-color: #fafafa;
}

.dash-app-sub-health-value {
	color: #dc484a;
	float: right;
	width: 84px;
	line-height: 64px;
	font-size: 32px;
	letter-spacing: 0.04em;
}

.dash-app-sub-health-value span {
	font-size: 0.4em;
	letter-spacing: 0;
	margin-left: 2px;
}

.dash-app-sub-busy-value {
	float: right;
	width: 84px;
	line-height: 64px;
	font-size: 32px;
	letter-spacing: 0.04em;
	color: #505050;
}

.app-list-count {
	font-weight: 400 !important;
	font-size: 26px;
	text-align: center !important;
	width: 56px;
	color: #555;
	vertical-align: middle !important;
	line-height: 14px !important;
}

.app-list-name {
	overflow: hidden;
}

.app-list-name {
	font-size: 16px;
	line-height: 14px !important;
	padding-left: 14px !important;
}

.app-list-name a {
	font-weight: bold;
	color: #2451A4;
}

.app-list-name span {
	color: #333;
	font-size: 16px;
	font-weight: normal;
}

.app-list-name > .app-list-status {
	color: #9698A5;
	font-size: 12px;
	height: 14px;
	display: block;
	overflow: hidden;
	white-space: nowrap;
}

.app-list-name > .app-status {
	text-transform: uppercase;
}

.panel ul {
	list-style: none;
}

.tree-chart {
	float: right;
	width: 262px;
}

.tree-count {
	float: right;
	width: 80px;
	padding: 10px;
	line-height: 32px !important;
}

.tree-toggle {
	float: left;
	cursor: pointer;
	width: 26px;
	padding-right: 0 !important;
	text-align: center;
	color: #505050;
}

.tree-chart, .tree-toggle, .tree-element {
	padding: 10px;
}
.tree-toggle {
	padding-left: 0;
	line-height: 30px;
}

.tree-node {
	clear: both;
}

/*
 * Loading Services
 */

span.service-icon {
  height: 32px;
  width: 32px;
  background-repeat: no-repeat;
  border: none !important;
  display: inline-block;
}

span.service-icon.loading {
  background-image: url('/assets/img/services-loading-blue.gif');
}

span.service-icon.complete {
  background-image: url('/assets/img/ok-icon.png');
}

span.log-icon.loading {
  display: none;
}

span.log-icon.complete {
  background-image: url('/assets/img/log-icon.png');
  height: 30px;
  width: 30px;
  background-repeat: no-repeat;
  border: none !important;
  display: inline-block;
}

#services-loading {
    position: absolute;
    right: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
    background-color: black;
    color: white;
    opacity: 0.8;
    z-index: 3;
}

.services-box {
	height: 500px;
	width: 500px;
	margin: 0 auto;
}

.animated, .services-list {
	width: 50%;
	margin-right: auto;
	margin-left: auto;
}

.animated.large {
	width: 75%;
}

.animated {
	font-size: 16px;
	margin-top: 120px;
	margin-bottom: 60px;
}

.animated img {
	margin-right: 30px;
	height: 58px;
	width: 58px;
}

.services-list {
	font-size: 18px;
	font-weight: bold;
	list-style: none;
}

.services-list li {
	line-height: 32px;
	margin-bottom: 20px;
	float: left;
	clear: both;
	width: 100%;
}

/*
 * Reactor Services
 */
#reactor-services #panels {
	padding-top: 40px;
}

#reactor-services th {
	border-right: 1px solid #C4C5CA;
	border-bottom: 1px solid #C4C5CA;
	line-height: 30px;
}

#reactor-services th.service-col {
	font-size: 14px;
	font-weight: bold;
	text-align: left;
}

#reactor-services td {
	height: 60px;
	border-right: 1px solid #C4C5CA;
}

#reactor-services .event-rate-col {
	border-right: 0;
}

.status-col img, .logs-col img {
	display: block;
	margin: 0 auto;
}

#reactor-services .instance-wrapper, #reactor-services .instance-wrapper div {
	height: 30px;
}

#reactor-services .instance-wrapper div {
	width: 65px;
}

.instance-wrapper {
	margin: 0 auto;
	width: 150px;
}

.instance-wrapper div {
	display: inline-block;
}

.instance-num {
	background-color: #062040;
	margin-right: 15px;
	width: 60px;
}

.instance-num span {
	color: white;
	display: block;
	font-weight: bold;
	line-height: 30px;
	text-align: center;
}

.instance-col span.minus-icon, .instance-col span.plus-icon {
  height: 30px;
  width: 30px;
  background-repeat: no-repeat;
  border: none !important;
  display: inline-block;
}

.instance-col span.minus-icon {
  background-image: url('/assets/img/minus.png');
}

.instance-col span.plus-icon {
  background-image: url('/assets/img/plus.png');
}

#instancesInput {
   text-align:left;
   height: 29px;
   width: 25px;
   color: black;
}

.services-instances-input{
  height: 29px ! important;
  max-width: 50px ! important;
  font-weight: bold ! important;
  text-align: center ! important;
}
/*
 * Bootstrap Overrides
 */
.navbar-inner {
	padding: 0 10px;
	background-color: #152c52;
	background-image: -webkit-linear-gradient(top, #152c52, #061c35) !important;
}

.navbar .nav > li > a {
	color: #b8c0cc;
}

.nav-pills > li > a {
	font-size: 12px;
	color: #77878B;
	text-transform: uppercase;
	line-height: 14px;
	height: 27px;
	letter-spacing: 0.1em;
	border-radius: 2px;
}
/* ... */

